--- a/Weather-API.html
+++ b/Weather-API.html
@@ -8,9 +8,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto Slab script=all rev=2" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Cantarell' rel='stylesheet' type='text/css' />
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 
 </head>
 
